# smoke-pack

./: license  package-lock.json  package.json  readme.md  tasks.js
src/: index.d.ts  index.ts  tsconfig.json
src/commands/: add.ts  assert.ts  build.ts  builder.ts  clean.ts  create.ts  index.ts  link.ts  list.ts  pack.ts  parse.ts  remove.ts  run.ts  start.ts  test.ts  unlink.ts  watch.ts
src/config/: config.ts  index.ts
src/host/: common.ts  exists.ts  index.ts  mkdir.ts  print.ts  readdir.ts  rmdir.ts  shell.ts  writeFile.ts
src/projects/: index.ts  writer.ts
src/projects/browser/: index.ts
src/projects/browser/files/: .gitignore  license  package.json  readme.md
src/projects/console/: index.ts
src/projects/console/files/: package.json  tasks.js
src/projects/electron/: index.ts
src/projects/electron/files/: license  package.json  readme.md  tasks.js
src/projects/electron/files/src/main/: index.ts  start.js  tsconfig.json
src/projects/electron/files/src/main/support/: index.ts  parse.ts  watch.ts
src/projects/electron/files/src/pages/: index.html
src/projects/electron/files/src/program/: tsconfig.json
src/projects/empty/: index.ts
src/projects/empty/files/: package.json  tasks.js
src/projects/wasm/: index.ts
src/projects/wasm/files/: Cargo.toml  README.md  tasks.js
