[package]
name        = "token-project-name"
version     = "0.1.0"
authors     = ["token-user <token-email>"]
description = "A description of this project."
license     = "MIT"
repository  = "https://github.com/token-user/token-project-name"

[lib]
crate-type  = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
